# git-ai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: bin.js  index.js  install.js  package.json
scripts/: README.md  bump-version.sh  check-version-sync.sh
src/: config.rs  git.rs  main.rs
src/commands/: commit.rs  config.rs  mod.rs  pr.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
