[package]
name = "git-ai"
version = "0.0.4"
edition = "2021"
description = "AI-powered Git assistant for commit messages, PR descriptions, and more"
license = "MIT"
repository = "https://github.com/DaleSeo/git-ai"

[[bin]]
name = "git-ai"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Terminal UI
colored = "2"
dialoguer = "0.11"

# Clipboard
arboard = "3"

# Utils
dirs = "5"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"
